finished section right before adding responsiveness

--- a/Natours/index.html
+++ b/Natours/index.html
@@ -71,7 +71,7 @@
         <span class="heading-primary--main">Outdoors</span>
         <span class="heading-primary--sub">is where life happens</span>
       </h1>
-      <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+      <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
     </div>
 
   </header>
@@ -160,7 +160,7 @@
 
     </section>
 
-    <section class="section-tours">
+    <section class="section-tours" id="section-tours">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
           Most popular tours
@@ -193,7 +193,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$297</p>
                 </div>
-                <a href="#" class="btn btn--white">Book now</a>
+                <a href="#popup" class="btn btn--white">Book now</a>
               </div>
             </div>
           </div>
@@ -224,7 +224,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$497</p>
                 </div>
-                <a href="#" class="btn btn--white">Book now</a>
+                <a href="#popup" class="btn btn--white">Book now</a>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$897</p>
                 </div>
-                <a href="#" class="btn btn--white">Book now</a>
+                <a href="#popup" class="btn btn--white">Book now</a>
               </div>
             </div>
           </div>
@@ -428,6 +428,33 @@
 
     </div>
   </footer>
+
+  <div class="popup" id="popup">
+    <div class="popup__content">
+      <div class="popup__left">
+        <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+        <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+      </div>
+      <div class="popup__right">
+        <a href="#section-tours" class="popup__close">&times;</a>
+        <h2 class="heading-secondary u-margin-bottom-small">
+          Start booking now
+        </h2>
+        <h3 class="heading-tertiary u-margin-bottom-small">
+          Important &ndash; Please read these terms before booking
+        </h3>
+        <p class="popup__text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum totam quis quidem at, temporibus, quasi, nisi
+          sint est id voluptate iste? Sapiente omnis ipsam error similique nisi incidunt, officia nostrum, dolore
+          dolorum ex temporibus? Amet, consequuntur! Accusantium fugiat cupiditate repellendus blanditiis incidunt
+          perferendis ipsam obcaecati vitae nisi, magnam atque explicabo voluptatum reiciendis eum quas distinctio, est
+          maxime libero, rerum illum? Minus, velit rerum. Nostrum quas fugit soluta error ipsam debitis nihil est
+          molestias, minus eum incidunt exercitationem voluptates inventore, pariatur odit nesciunt explicabo cumque.
+        </p>
+        <a href="#" class="btn btn--green">Book now</a>
+      </div>
+    </div>
+  </div>
 
 
 
